--- a/carciofo-web-blocker/manifest.json
+++ b/carciofo-web-blocker/manifest.json
@@ -10,6 +10,7 @@
     "action": {
         "default_popup": "popup.html"
     },
+    "options_page": "options/options.html",
     
     "manifest_version": 3
 }
